--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>000</title>
 </head>
 <body>
-  <p><font size="7">ニックネーム：とみお　コード0000</font></p>
+  <p><font size="7">ニックネーム：なおと　コード0000</font></p>
 </body>
 </html>
